--- a/assets/scss/index/footer.scss
+++ b/assets/scss/index/footer.scss
@@ -1,6 +1,12 @@
 .footer-container {
   text-align: center;
-  padding: 40px 0;
+  
+  .footer-inner {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   .social-icons {
     display: flex;
@@ -44,7 +50,7 @@
   p {
     margin: 6px 0;
     color: var(--theme-text-primary);
-    line-height: var(--font-base-lh);
+    line-height: var(--font-base-line-height);
     transition: transitions(color, 0.3s);
   }
 
