--- a/assets/scss/index/page.scss
+++ b/assets/scss/index/page.scss
@@ -37,7 +37,7 @@
   
       div {
         overflow: hidden;
-        line-height: var(--font-base-lh);
+        line-height: var(--font-base-line-height);
       }
   
       h4 {
