--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 {{- partial "head.html" . -}}
-
 <body>
     {{- partial "header.html" . -}}
     <main id="content">
@@ -11,5 +10,4 @@
 
     {{- partial "footer-script" . -}}
 </body>
-
 </html>
