--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,12 @@
 <header class="header-container layout-block layout-padding">
-  <div class="header-inner content-padding-large soft-size--large soft-style--box">
+  <div class="header-inner content-padding-large soft-size--large">
     <div class="header-logo">
-      <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
+      <a href="{{ .Site.BaseURL }}">
+        <h2>{{ .Site.Title }}</h2>
+      </a>
     </div>
     <nav class="header-nav">
       <div class="header-nav--btn">
-        <div class="btn-item"></div>
-        <div class="btn-item"></div>
         <div class="btn-item"></div>
       </div>
       <div class="header-nav--list">
@@ -18,4 +18,5 @@
       </div>
     </nav>
   </div>
+  <br />
 </header>
