--- a/assets/scss/_base/theme.scss
+++ b/assets/scss/_base/theme.scss
@@ -1,21 +1,20 @@
-/** light theme */
-$light-bg-primary: #f5f8fa;
+/** Light theme */
+$light-bg-primary: #ffffff;
 $light-bg-high: #ffffff;
-$light-bg-shadow: #dddfe1;
-$light-bg-active1: #dddfe1;
+$light-bg-shadow: #1b1b1f;
+$light-bg-active1: #ffffff;
 $light-bg-active2: #ffffff;
 
-$light-text-active: #f857a6;
+$light-text-active: #1b1b1b;
 $light-text-light: #ffffff;
-$light-text-primary: #3e3e5f;
-$light-text-low: #aeacb1;
-$light-text-stress: #14281D;
+$light-text-primary: #000000;
+$light-text-low: #969ea9;
+$light-text-stress: #1b1b1f;
 
-$light-border-primary: #e1e4e8;
-$light-border-secondary: #ebedef;
+$light-border-primary: #444c56;
+$light-border-secondary: #373e47;
 
-
-/** dark theme */
+/** Dark theme */
 $dark-bg-primary: #1e2428;
 $dark-bg-high: #303a40;
 $dark-bg-shadow: #0c0e10;
@@ -31,57 +30,21 @@ $dark-text-stress: #cdd9e5;
 $dark-border-primary: #444c56;
 $dark-border-secondary: #373e47;
 
-:root.theme-light {
+:root {
   --theme-bg-primary: #{$light-bg-primary};
   --theme-bg-high: #{$light-bg-high};
   --theme-bg-shadow: #{$light-bg-shadow};
-  --theme-bg-actvie1: #{$light-bg-active1};
-  --theme-bg-actvie2: #{$light-bg-active2};
-
+  --theme-bg-active1: #{$light-bg-active1};
+  --theme-bg-active2: #{$light-bg-active2};
+  
   --theme-text-active: #{$light-text-active};
   --theme-text-light: #{$light-text-light};
   --theme-text-primary: #{$light-text-primary};
   --theme-text-low: #{$light-text-low};
   --theme-text-stress: #{$light-text-stress};
-
+  
   --theme-border-primary: #{$light-border-primary};
   --theme-border-secondary: #{$light-border-secondary};
-}
-
-:root.theme-dark {
-  --theme-bg-primary: #{$dark-bg-primary};
-  --theme-bg-high: #{$dark-bg-high};
-  --theme-bg-shadow: #{$dark-bg-shadow};
-  --theme-bg-actvie1: #{$dark-bg-active1};
-  --theme-bg-actvie2: #{$dark-bg-active2};
-
-  --theme-text-active: #{$dark-text-active};
-  --theme-text-light: #{$dark-text-light};
-  --theme-text-primary: #{$dark-text-primary};
-  --theme-text-low: #{$dark-text-low};
-  --theme-text-stress: #{$dark-text-stress};
-  
-  --theme-border-primary: #{$dark-border-primary};
-  --theme-border-secondary: #{$dark-border-secondary};
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    --theme-bg-primary: #{$light-bg-primary};
-    --theme-bg-high: #{$light-bg-high};
-    --theme-bg-shadow: #{$light-bg-shadow};
-    --theme-bg-actvie1: #{$light-bg-active1};
-    --theme-bg-actvie2: #{$light-bg-active2};
-
-    --theme-text-active: #{$light-text-active};
-    --theme-text-light: #{$light-text-light};
-    --theme-text-primary: #{$light-text-primary};
-    --theme-text-low: #{$light-text-low};
-    --theme-text-stress: #{$light-text-stress};
-
-    --theme-border-primary: #{$light-border-primary};
-    --theme-border-secondary: #{$light-border-secondary};
-  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -89,15 +52,15 @@ $dark-border-secondary: #373e47;
     --theme-bg-primary: #{$dark-bg-primary};
     --theme-bg-high: #{$dark-bg-high};
     --theme-bg-shadow: #{$dark-bg-shadow};
-    --theme-bg-actvie1: #{$dark-bg-active1};
-    --theme-bg-actvie2: #{$dark-bg-active2};
-
+    --theme-bg-active1: #{$dark-bg-active1};
+    --theme-bg-active2: #{$dark-bg-active2};
+    
     --theme-text-active: #{$dark-text-active};
     --theme-text-light: #{$dark-text-light};
     --theme-text-primary: #{$dark-text-primary};
     --theme-text-low: #{$dark-text-low};
     --theme-text-stress: #{$dark-text-stress};
-  
+    
     --theme-border-primary: #{$dark-border-primary};
     --theme-border-secondary: #{$dark-border-secondary};
   }
