--- a/assets/scss/index/card.scss
+++ b/assets/scss/index/card.scss
@@ -35,9 +35,8 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: #ff5858;
-    background-image: linear-gradient(1deg, #f857a6, #ff5858);
-
+    background-color: #9E7A7A; /* 修改为您希望的背景颜色 */
+    
     &::after {
       content: "";
       display: block;
@@ -46,13 +45,12 @@
       left: 0;
       width: 100%;
       height: 100%;
-      opacity: 0.3;
-      background-image: linear-gradient(234deg, #394245 0%, #000 100%);
+      opacity: 0;
     }
   }
 
   .card-text {
-    line-height: var(--font-base-lh);
+    line-height: var(--font-base-line-height);
     color: var(--theme-text-light);
     position: relative;
     transition: transitions(color, 0.3s);
@@ -99,7 +97,8 @@
   scroll-snap-type: x proximity;
 
   &::-webkit-scrollbar {
-    display: none;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .swiper-item {
@@ -129,41 +128,33 @@
 
   .article-item {
     padding: var(--layout-padding-x);
-    max-width: 100%;
+    max-width: 80%;
     flex: 1 0 auto;
 
     @include mq-pc {
-      min-width: 25%;
+      min-width: 35%;
     }
 
     @include mq-mb {
-      width: 100%;
-      min-width: 230px;
+      width: 89%;
+      min-width: 89%;
+      margin: auto;
     }
 
     &:nth-child(1n) .article-card .card-cover {
-      background-color: #e77842;
-      background-image: linear-gradient(45deg, #e77842, #f7c068);
+      background-color: #B9887D; 
     }
 
     &:nth-child(2n) .article-card .card-cover {
-      background-image: #ff5858;
-      background-image: linear-gradient(1deg, #f857a6, #ff5858);
+      background-color: #DC9F84; 
     }
 
     &:nth-child(3n) .article-card .card-cover {
-      background-color: #b53cff;
-      background-image: linear-gradient(20deg, #b53cff, #f952ff);
+      background-color: #E3916E; 
     }
 
     &:nth-child(4n) .article-card .card-cover {
-      background-color: #6bd0ff;
-      background-image: linear-gradient(40deg, #327ae7, #6bd0ff);
-    }
-
-    &:nth-child(5n) .article-card .card-cover {
-      background-color: #ffd62e;
-      background-image: linear-gradient(40deg, #ffb040, #ffd62e);
+      background-color: #D19826; 
     }
   }
 }
@@ -175,7 +166,7 @@
 
   .post-paging--item {
     margin: var(--layout-padding-x);
-    color: var(--theme-text-light);
+    color: var(--theme-text-dark); /* 根据实际需求调整文本颜色 */
     text-align: center;
     flex: 1;
     transition: transitions(color, 0.3s);
