--- a/layouts/_default/single-baseof.html
+++ b/layouts/_default/single-baseof.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 {{- partial "head.html" . -}}
-
 <body>
   {{- partial "header.html" . -}}
-  <main id="content">
-    <!-- {{ partial "card/card-banner.html" . }} -->
-
-    <div class="single-container layout-block">
-      <div class="article-info">
-        <div class="article-header layout-padding">
-          {{ partial "card/card-cover.html" . }}
+  <main id="content" class="single-container layout-block">
+    <div class="article-info">
+      <div class="article-header layout-padding">
+        {{ partial "card/card-cover.html" . }}
+      </div>
+      <div class="article-content">
+        <div class="markdown-body content-padding-large soft-size--large soft-style--box">
+          {{ .Content }}
         </div>
-
-        <div class="article-content">
-          <div class="markdown-body content-padding-large soft-size--large soft-style--box">
-            {{ .Content }}
-          </div>
-        </div>
-
         {{- block "main" . }}{{- end -}}
       </div>
-
-      {{- block "widget" . -}}{{- end -}}
+      <div class="disqus-box layout-margin content-padding-large soft-size--large soft-style--box">
+        <div id="tcomment"></div>
+      </div>
     </div>
+      {{- block "widget" . -}}{{- end -}}
   </main>
-
   {{- partial "footer.html" . -}}
-
-  {{- partial "footer-script" . -}}
-
-  {{- partial "footer-single" . -}}
+  {{- partial "footer-script.html" . -}}
+  {{- partial "footer-single.html" . -}}
 </body>
-
 </html>
