--- a/layouts/partials/footer-script.html
+++ b/layouts/partials/footer-script.html
@@ -1,2 +1,10 @@
-{{/* google analytics */}}
-{{- template "_internal/google_analytics.html" . -}}
+<script src="https://cdn.bootcdn.net/ajax/libs/twikoo/1.6.32/twikoo.all.min.js"></script>
+<script>
+twikoo.init({
+  envId: 'https://cobk.dahi.icu', // 腾讯云环境填 envId；Vercel 环境填地址（https://xxx.vercel.app）
+  el: '#tcomment', // 容器元素
+  // region: 'ap-guangzhou', // 环境地域，默认为 ap-shanghai，腾讯云环境填 ap-shanghai 或 ap-guangzhou；Vercel 环境不填
+  // path: location.pathname, // 用于区分不同文章的自定义 js 路径，如果您的文章路径不是 location.pathname，需传此参数
+  lang: 'zh-tw', // 用于手动设定评论区语言，支持的语言列表 https://github.com/imaegoo/twikoo/blob/main/src/client/utils/i18n/index.js
+})
+</script>
