--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,12 +1,9 @@
 <head>
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="https://coolapk-oss-image.oss-cn-hangzhou.aliyuncs.com/feed/2023/0721/16/999_09be2a00_6933_9634_588@1024x1024.png" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=0.25,user-scalable=yes">
   {{ if or .Params.author .Site.Author.name }} {{/* author */}}
     <meta name="author" content="{{- or .Params.author .Site.Author.name -}}">
   {{ end }}
-
   {{ if or .Keywords .Site.Params.keywords }} {{/* keywords */}}
     {{ $keywords := slice }}
     {{ with .Params.keywords }}
@@ -18,27 +15,23 @@
     {{ end }}
     <meta name="keywords" content="{{ range $index, $value := $keywords }}{{ if gt $index 0 }},{{ end }}{{ $value }}{{ end }}">
   {{ end }}
-
   {{ if or .Description .Site.Params.description }} {{/* description*/}}
     <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}">
   {{ end }}
-
-  {{ hugo.Generator }}
   {{ $title := .Site.Title }}
   {{ with .Params.Title }}
-  {{ $title = printf "%s 🏷️ %s" . $title }}
+  {{ $title = printf "%s - %s" . $title }}
   {{ end }}
   <title>{{- $title -}}</title>
-
+  <link rel="stylesheet" href="https://fonts.loli.net/css?family=Noto+Sans+SC:100,300,400,500,700,900">
+  <link rel="shortcut icon" href="https://oxs.dahi.icu/avatar.png" crossorigin="anonymous" />
   {{ template "_internal/opengraph.html" . }}
   {{ template "_internal/twitter_cards.html" . }}
-
   {{/* style */}}
   {{ $sass := resources.Get "scss/index/index.scss" }}
   {{ $options := dict "targetPath" "assets/css/style.min.css" "outputStyle" "compressed" }}
   {{ $style := $sass | resources.ToCSS $options | resources.Fingerprint "sha256" }}
   <link rel="stylesheet" href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}">
-
   {{/* script */}}
   {{- $js := resources.Get "ts/main.ts" -}}
   {{- $opts := dict "targetPath" "assets/js/main.min.js" "minify" hugo.IsProduction -}}
@@ -47,7 +40,9 @@
   {{ with .OutputFormats.Get "rss" -}}
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
-  {{ template "_internal/google_analytics_async.html" . }}
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3758644447684310"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3758644447684310"
      crossorigin="anonymous"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </head>
